# shrimpicus_domain

./: .env.example  .env.production.example  .gitignore  CLEANUP_SUMMARY.md  CODEX.md  DEPLOYMENT_PLAN.md  DUPLICATE_TODO_FIX.md  FEATURES.md  GROQ_SETUP.md  GROQ_SWITCH_COMPLETE.md  OPENROUTER_COMPLETE.md  OPENROUTER_SETUP.md  POSTGRES_MIGRATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  TODO_VISIBILITY_FIX.md  WEB_TODOS_VISIBILITY_FIX.md  Z.md  gunicorn.conf.py  migrate_to_postgres.py  nginx.conf  opencode.json  pyproject.toml  take_screenshots.py
shrimpicus/: __main__.py  assistant.py  auth.py  bot.py  config.py  db.py  main.py  mcp_server.py  notion.py  obsidian.py  ollama.py  recur.py  run_all.py  scheduler.py  social_notifications.py  tools.py  transcribe.py
shrimpicus/web/: __init__.py  app.py
shrimpicus/web/static/: board.js  field.js  focus.js  habits.css  habits.js  style.css
shrimpicus/web/templates/: account.html  base.html  board.html  field.html  focus.html  habits.html  index.html  login.html  signup.html  social.html  xp.html
