[project]
name = "shrimpicus"
version = "0.1.0"
description = "Personal AI assistant with Discord, Ollama, reminders, Notion, and Obsidian."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.1",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.0.3",
]

[project.scripts]
shrimpicus = "shrimpicus.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
