[project]
name = "shrimpicus"
version = "0.1.0"
description = "Personal AI assistant with Discord, Ollama, reminders, Notion, and Obsidian."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.1",
  "python-dateutil>=2.9.0",
  "flask>=3.0.0",
  "argon2-cffi>=25.0.0",
  "psycopg2-binary>=2.9.9",
  "gunicorn>=21.2.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.0.3",
]
mcp = [
  "mcp>=1.2.0",
]

[project.scripts]
shrimpicus = "shrimpicus.main:main"
shrimpicus-bot = "shrimpicus.main:main"
shrimpicus-web = "shrimpicus.web.app:main"
shrimpicus-mcp = "shrimpicus.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shrimpicus", "shrimpicus.web"]

[tool.setuptools.package-data]
"shrimpicus.web" = ["templates/*.html", "static/*"]
